# sodoku

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  README.txt
lib/: sodoku.cpp  sodoku.hpp
sample_sodokus/: bastard.txt  test1.txt  test10.txt  test11.txt  test2.txt  test3.txt  test4.txt  test5.txt  test7.txt  test8.txt  test9.txt
src/: main.cpp
test/: test.cpp
